# c--lc3-compiler

./: .gitignore  AGENTS.md  README.md  lc3说明书.md  pyproject.toml  setup.py
.github/workflows/: release.yml
compiler_lc3/: __init__.py  __main__.py  ast.py  codegen.py  lexer.py  optimizer.py  parser.py
examples/: sum.c
lc3tools/: Makefile.def  configure  lc3.f  lc3as  lc3convert  lc3sim.c  lex.lc3.c  lex.lc3convert.c
lc3tools/install/: lc3sim  lc3sim-tk
scripts/: build_release.py  pyinstaller_entry.py
tests/: oracle.py  run_tests.py
tests/cases/: address_simplify.c  array_basic.c  array_call_index.c  array_complex_index.c  array_index_side_effect.c  array_init_call.c  array_loop.c  array_partial_init.c  assignment_chain.c  beginner_array_call_mix.c  beginner_builtin_leaf.c  beginner_global_local.c  beginner_input_loop.c  beginner_loop_local.c  beginner_multi_func.c  beginner_nested_call.c  branch_call_mix_output.c  builtin_leaf_return.c  call_chain_output.c  call_in_condition.c  char_bool_logic_output.c  char_pointer_write.c  compare_false_matrix.c  compare_matrix.c  compare_negative_edges.c  compound_array_ptr.c  compound_assign.c  deep_add_chain_output.c  deref_compound_assign.c  div_edge.c  divide_mod.c  double_pointer_read_write.c  early_return_nested.c  five_param_sum_output.c  for_and_call.c  for_and_call_output.c  for_continue_step.c  for_empty_clauses.c  for_no_condition_break.c  for_step_call_continue.c  (+36 more)
tests/golden/: address_simplify.asm  array_basic.asm  array_call_index.asm  array_complex_index.asm  array_index_side_effect.asm  array_loop.asm  (+70 more)
