[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "compiler-lc3"
version = "0.1.0"
description = "A small C-subset to LC-3 compiler"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
compiler-lc3 = "compiler_lc3.__main__:main"

[tool.setuptools]
packages = ["compiler_lc3"]
